// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Article Component renders correctly with title 1`] = `
Array [
  <article
    className="article"
  >
    <h1
      id="Test"
    >
      Test
    </h1>
    <style
      jsx={true}
    >
      
        h1 {
          font-size: 1.7em;
          margin: 0 0 40px 0;
          animation-name: headlineEntry;
          animation-duration: 1s;

          :global(span) {
            font-weight: 400;
            display: block;
            font-size: 0.5em;
            letter-spacing: 0;
            margin: 0 0 5px 0;
          }

          :global(svg) {
            height: 0.75em;
            fill: #2c3e50;
          }
        }

        @keyframes headlineEntry {
          from {
            opacity: 0.5;
          }
          to {
            opacity: 1;
          }
        }

        @from-width tablet {
          h1 {
            font-size: calc(2em * 1.2);
          }
        }

        @from-width desktop {
          h1 {
            font-size: calc(2em * 1.4);
          }
        }
      
    </style>
    <h2>
      SubTest
    </h2>
    <style
      jsx={true}
    >
      
        h2 {
          font-size: 1.35em;
          margin: 0 0 20px 0;
          animation-name: headlineEntry;
          animation-duration: 1s;

          :global(span) {
            font-weight: 400;
            display: block;
            font-size: 0.5em;
            letter-spacing: 0;
            margin: 0 0 5px 0;
          }

          :global(svg) {
            height: 0.75em;
            fill: #2c3e50;
          }
        }

        @keyframes headlineEntry {
          from {
            opacity: 0.5;
          }
          to {
            opacity: 1;
          }
        }

        @from-width tablet {
          h2 {
            font-size: calc(1.35em * 1.2);
          }
        }

        @from-width desktop {
          h2 {
            font-size: calc(1.35em * 1.4);
          }
        }
      
    </style>
  </article>,
  <style
    jsx={true}
  >
    
        .article {
          padding: 20px;
          margin: 0 auto;
        }
        @from-width tablet {
          .article {
            padding: calc(20px) calc(20px * 2);
            max-width: 650px;
          }
        }
        @from-width desktop {
          .article {
            padding: calc(20px * 2 + 90px) 0 calc(20px * 2);
            max-width: 750px;
          }
        }
      
  </style>,
]
`;

exports[`Article Component renders correctly without title 1`] = `
Array [
  <article
    className="article"
  >
    <h1 />
    <style
      jsx={true}
    >
      
        h1 {
          font-size: 1.7em;
          margin: 0 0 40px 0;
          animation-name: headlineEntry;
          animation-duration: 1s;

          :global(span) {
            font-weight: 400;
            display: block;
            font-size: 0.5em;
            letter-spacing: 0;
            margin: 0 0 5px 0;
          }

          :global(svg) {
            height: 0.75em;
            fill: #2c3e50;
          }
        }

        @keyframes headlineEntry {
          from {
            opacity: 0.5;
          }
          to {
            opacity: 1;
          }
        }

        @from-width tablet {
          h1 {
            font-size: calc(2em * 1.2);
          }
        }

        @from-width desktop {
          h1 {
            font-size: calc(2em * 1.4);
          }
        }
      
    </style>
    <h2 />
    <style
      jsx={true}
    >
      
        h2 {
          font-size: 1.35em;
          margin: 0 0 20px 0;
          animation-name: headlineEntry;
          animation-duration: 1s;

          :global(span) {
            font-weight: 400;
            display: block;
            font-size: 0.5em;
            letter-spacing: 0;
            margin: 0 0 5px 0;
          }

          :global(svg) {
            height: 0.75em;
            fill: #2c3e50;
          }
        }

        @keyframes headlineEntry {
          from {
            opacity: 0.5;
          }
          to {
            opacity: 1;
          }
        }

        @from-width tablet {
          h2 {
            font-size: calc(1.35em * 1.2);
          }
        }

        @from-width desktop {
          h2 {
            font-size: calc(1.35em * 1.4);
          }
        }
      
    </style>
    <div
      className="bodytext"
    >
      <p>
        test
      </p>
    </div>
    <style
      jsx={true}
    >
      
        .bodytext {
          animation-name: bodytextEntry;
          animation-duration: 1s;

          :global(h2),
          :global(h3) {
            margin: 1.5em 0 1em;
          }

          :global(h2) {
            line-height: 1.2;
            font-size: 1.35em;
          }

          :global(h3) {
            font-size: 1.1em;
            line-height: 1.3;
          }

          :global(p) {
            font-size: 1.1em;
            line-height: 1.6;
            margin: 0 0 1.5em;
          }
          :global(ul) {
            list-style: circle;
            margin: 0 0 1.5em;
            padding: 0 0 0 1.5em;
          }
          :global(li) {
            margin: 0.7em 0;
            line-height: 1.5;
          }
          :global(a) {
            font-weight: 600;
            color: #2c3e50;
            text-decoration: underline;
          }
          :global(a.gatsby-resp-image-link) {
            border: 0;
            display: block;
            margin: 2.5em 0;
            border-radius: 10px;
            overflow: hidden;
            border: 1px solid #ecebea;
          }
          :global(code.language-text) {
            background: #ecebea;
            text-shadow: none;
            color: inherit;
            padding: 0.1em 0.3em 0.2em;
            border-radius: 0.1em;
          }
        }

        @keyframes bodytextEntry {
          from {
            opacity: 0;
          }
          to {
            opacity: 1;
          }
        }
      
    </style>
  </article>,
  <style
    jsx={true}
  >
    
        .article {
          padding: 20px;
          margin: 0 auto;
        }
        @from-width tablet {
          .article {
            padding: calc(20px) calc(20px * 2);
            max-width: 650px;
          }
        }
        @from-width desktop {
          .article {
            padding: calc(20px * 2 + 90px) 0 calc(20px * 2);
            max-width: 750px;
          }
        }
      
  </style>,
]
`;
